# NatNetPy

./: README.md  pyproject.toml
natnetpy/: NatNetClient.py  __init__.py  main.py
natnetpy/NatNetSDK/: DataDescriptions.py  MoCapData.py  NatNetClient.py  PythonSample.py
tests/: test_NatNetClient.py
