[tool.poetry]
name = "natnetpy"
version = "0.1.0"
description = ""
authors = ["takumi-nishimura <clp13218@nitech.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
